<resources>
    <string name="app_name">News App</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search</string>
    <string name="pick_category">Pick your category\nof interest</string>
    <string name="language">Language</string>
    <string name="view_full_article">View Full Article</string>
    <string name="articles_not_found">This source doesn\'t have\n any news currently</string>
    <string name="search_not_found">Sorry, we couldn\'t find any articles</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="search_hint">Search Article</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="try_again">try again</string>
    <string name="cancel">cancel</string>
    <string name="connection_error">Check your internet connection then retry again</string>
    <string name="no_connection">No connection</string>
    <string name="back_online">Back Online</string>
    <string name="back__online">Back Online</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
</resources>
